# auto-morpheus-bmaas

./: .env.base  .env.dev  .gitignore  README.md  conftest.py  docker-compose.yml  install_dependencies.sh  pyproject.toml  requirements.txt  requirements_freeze.txt  run-st.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci_merge.yaml  ci_pr.yaml
automation/: conftest.py  constants.py  logger.py  parser.sh  pyproject.toml  user_creds.json.example
automation/configs/device_mappings/: sm_mapping.py
automation/configs/test_data_env/: aquila_settings.py  gemini_settings.py  hoku_settings.py  mira_settings.py  pavo_settings.py  polaris_settings.py  triton_lite_settings.py
automation/local_libs/login/: app_api_login.py  user_api_login.py  web_ui_login.py
automation/local_libs/ui_doorway/: ui_doorway_devices_by_api.py
automation/tests/examples/brownfield/ExistingAcctNewDevices/: brnf_network_existing_acct_devices.py  test_bf_network_existing_acct_devices.py
config/pytest/: pytest_dev.ini  pytest_regression_dev.ini
docker/: Dockerfile
lib/common/: exceptions.py  utils.py
lib/common/constants/: storage_wait.py  switch_commands.py  switch_interfaces.py
lib/common/enums/: backup_status.py  backup_type.py  environment_code.py  file_path.py  ilo_boot_option.py  ilo_device.py  ilo_workload_profile.py  instance_status.py  instance_type_code.py  ip_mode.py  linux_filesystem_types.py  location_type.py  morpheus_api_endpoint_type.py  network_type_name.py  os_type.py  process_status.py  process_type.py  server_status.py  server_type.py  (+9 more)
lib/platform/: io_manager.py  remote_ssh_manager.py
lib/tools/: array_reinit.py  base_os_install.py  dsc_install.py  ilo_operations.py  switch_reset.py
morpheus_api/: __init__.py  exceptions.py  settings.py
morpheus_api/api_endpoints/: backup_service.py  cluster_service.py  container_service.py  group_service.py  image_build_service.py  instance_service.py  instance_type_service.py  library_service.py  network_service.py  network_type_service.py  option_service.py  provision_type_service.py  server_service.py  service_plan_service.py  snapshot_service.py  storage_bucket_service.py  storage_volume_service.py  storage_volume_type_service.py  virtual_image_service.py  zone_service.py
morpheus_api/configuration/: utils.py
morpheus_api/dataclasses/: backup.py  base_object.py  cloud.py  cluster.py  cluster_layout.py  common_objects.py  container.py  datastore.py  group.py  image_build.py  instance.py  instance_type_layout.py  network.py  network_options.py  processes.py  provision_type.py  server.py  service_plan.py  snapshot.py  storage_bucket.py  storage_volume_type.py  virtual_image.py  volume.py  zone.py
scripts/: docstring_validation.sh  linters.sh  pr_title_validation.py
setup_ui/: constants.py  ui_settings.py
setup_ui/enums/: installation_type.py
setup_ui/locators/: common_locators.py
setup_ui/page_object/: base_page.py  base_test.py
tests/steps/: container_steps.py
(+38 files in other folders)
