[tool.poetry]
name = "auto-morpheus-bmplugin"
version = "8.0.5"
description = "HPE Private Cloud Morpheus Baremetal Automation Library "
authors = ["Baremetal Plugin QA"]

[tool.poetry.dependencies]
playwright = "^1.40.0"
hpe-morpheus-automation-libs = "8.0.5.dev51"
python = ">=3.10, <4.0"
pydantic = "^2.10.6"

[[tool.poetry.source]]
name = "jfrog"
url = "https://aruba.jfrog.io/aruba/api/pypi/pypi-local/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"